[project]
name = "python-template"
version = "0.1.0"
description = "Telegram bot project"
authors = [{ name = "Your Name", email = "ccxt@cxt.com" }]
requires-python = ">=3.11"
dependencies = [
    "aiogram==2.15.0",
    "faker>=37.1.0",
    "pyrogram>=2.0.106",
    "pysocks>=1.7.1",
    "pytelegrambotapi>=4.27.0",
    "python-telegram-bot==13.15",  # ✅ Compatible with 'Updater', 'Filters', etc.
    "requests>=2.32.3",
    "telethon>=1.40.0",
    "tgcrypto>=1.2.5",
    "tqdm>=4.67.1",
    "urllib3>=2.4.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
